--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,9 +1,21 @@
+.full-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1100px) {
+  .full-container {
+    flex-direction: column;
+  }
+}
+
 .Chat-Window {
   background-color: #0e1621;
   min-height: 90vh;
   color: white;
   width: 400px;
-  margin: 30px auto;
+  margin: 30px;
 }
 
 .Chat-Header {
