--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -192,11 +192,37 @@
 .video-id-button {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 10px;
 }
 
 .group-logo {
   background-color: coral;
   border-radius: 50%;
+}
+
+.modal {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.inside-modal {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  margin-bottom: auto;
+  width: 400px !important;
+  height: 400px !important;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
 }
