--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -3,11 +3,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  height: 100vh;
 }
 
 .wrapper {
   display: flex;
+  margin-top: 50px;
   flex-direction: column;
   background-color: white;
   border-radius: 5px;
@@ -17,7 +18,12 @@
   height: 200px;
 }
 
+.button {
+  margin-top: 10px;
+}
+
 .input {
+  margin-top: 10px;
   border: none;
   border-bottom: 1px solid grey;
   margin-top: 10px;
