--- a/client/src/components/Chat/components/Message/Message.css
+++ b/client/src/components/Chat/components/Message/Message.css
@@ -10,7 +10,7 @@
 
 .time {
   margin-left: 10px;
-  margin-bottom: -5px;
+  margin-bottom: -10px;
   opacity: 60%;
 }
 
@@ -21,4 +21,11 @@
   max-width: 75%;
   background-color: #182533;
   font-weight: 500;
+}
+
+.received {
+  margin-bottom: 5px;
+  display: flex !important;
+  flex-direction: column;
+  align-items: flex-start !important;
 }
