--- a/client/src/components/Player/Player.css
+++ b/client/src/components/Player/Player.css
@@ -205,10 +205,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: auto;
 }
 
 .inside-modal {
